# ARES-MEMORY-OS

./: .ares.db  .env.example  .gitignore  Architecture_Milestone_v0.9.0.md  BENCHMARKS.md  CHANGELOG.md  CODEOWNERS  Cargo.toml  Cargo.workspace.toml  PHASE1_HANDOFF.md  README.md  SESSION_STATE_SNAPSHOT.md  add_write_tools.py  apply_fixes.py  apply_fixes2.py  apply_fixes3.py  base.json  check_db.py  check_indexes.py  components.txt  components_clean.txt  continuous_capture_validation.md  coverage_report.md  crates_loc.json  debug.py  demo.ps1  drift_report.md  dump_indexes.py  dump_indexes_md.py  dump_tools.py  extension_cert.md  extension_gap_analysis.md  extract_tools.py  find_app_state.py  find_inputs.py  fix_blame.py  fix_blame_2.py  fix_gaps.py  fix_main.py  fix_main_2.py  (+42 more)
crates/ares-agent/: Cargo.toml
crates/ares-agent-arena/: Cargo.toml
crates/ares-agent-arena/src/: evaluator.rs  executor.rs  lib.rs  models.rs  report.rs  telemetry.rs
crates/ares-agent-runtime/: Cargo.toml
crates/ares-agent-runtime/src/: governance.rs  id_bridge.rs  lib.rs  memory_bridge.rs  tests.rs
crates/ares-agent/src/: agent.rs  cli.rs  config.rs  inference.rs  lib.rs  main.rs
crates/ares-api/: Cargo.toml
crates/ares-api/src/: auth.rs  lib.rs  main.rs  models.rs
crates/ares-api/tests/: api_contracts.rs  audit_tests.rs
crates/ares-app/: Cargo.toml
crates/ares-app/src/: lib.rs
crates/ares-benchmark/: Cargo.toml  context_dataset.json
crates/ares-benchmark/src/: agent.rs  lib.rs  main.rs  report.rs  runner.rs  scoring.rs  tools.rs
crates/ares-candidates/: Cargo.toml
crates/ares-candidates/src/: confidence.rs  lib.rs  models.rs  promotion.rs  repository.rs  sources.rs
crates/ares-chat-import/: Cargo.toml
crates/ares-chat-import/src/: extractor.rs  lib.rs  pipeline.rs  types.rs
crates/ares-cli/: Cargo.toml
crates/ares-cli/src/: main.rs
crates/ares-cli/tests/: graph_integrity_test.rs
crates/ares-completeness/: Cargo.toml
crates/ares-completeness/src/: completeness_engine.rs  coverage_engine.rs  coverage_snapshot.rs  health_engine.rs  lib.rs  models.rs  prioritization_engine.rs  topology_engine.rs
crates/ares-completeness/tests/: completeness_certification_suite.rs
crates/ares-context/: Cargo.toml
crates/ares-context-generator/: Cargo.toml
crates/ares-context-generator/src/: compressor.rs  generator.rs  lib.rs  summarizer.rs  templates.rs  types.rs
crates/ares-context-injector/: Cargo.toml
crates/ares-context-injector/src/: assembly.rs  lib.rs  retrieval.rs  tests.rs  types.rs
crates/ares-context/src/: context_engine.rs  lib.rs
crates/ares-coordination/: Cargo.toml
crates/ares-coordination/src/: lib.rs  tests.rs
crates/ares-decision-dna/: Cargo.toml
crates/ares-decision-dna/src/: lib.rs
crates/ares-decision-intelligence/: Cargo.toml
crates/ares-decision-intelligence/src/: health.rs  history.rs  integration.rs  lib.rs  models.rs  storage.rs
crates/ares-decision-intelligence/tests/: decision_intelligence_certification.rs
crates/ares-embeddings/: Cargo.toml
crates/ares-embeddings/src/: lib.rs
crates/ares-extractor/: Cargo.toml
crates/ares-extractor/src/: engine.rs  git.rs  lib.rs  provider.rs
crates/ares-gap-engine/: Cargo.toml
crates/ares-gap-engine/src/: clustering.rs  engine.rs  lib.rs  models.rs  prioritization.rs  reasoning.rs  trends.rs
crates/ares-git-memory/: Cargo.toml
crates/ares-git-memory/src/: blame.rs  branches.rs  codeowners.rs  commits.rs  lib.rs  models.rs  releases.rs
crates/ares-governance/: Cargo.toml
crates/ares-governance/src/: approval.rs  approval_graph_engine.rs  audit_engine.rs  candidate_governance_engine.rs  capability_engine.rs  certification.rs  classifier.rs  compliance_engine.rs  confidence_engine.rs  coverage_engine.rs  dashboard.rs  diagnostics.rs  drift.rs  events.rs  exemptions.rs  facade.rs  governance_gap_engine.rs  governance_health_engine.rs  lib.rs  memory_debt_engine.rs  memory_drift_engine.rs  memory_gatekeeper.rs  memory_health_engine.rs  memory_maturity_model.rs  models.rs  mutation_simulator.rs  ownership_engine.rs  policy_loader.rs  risk_engine.rs  sarif.rs  scorecard.rs  store.rs  strict_evaluation.rs
crates/ares-governance/tests/: dashboard_test.rs  governance_certification_suite.rs  verification_sprint.rs
crates/ares-ingestion/: Cargo.toml
crates/ares-ingestion/src/: gap_generator.rs  graph.rs  lib.rs  scanner.rs
crates/ares-intelligence/: Cargo.toml
crates/ares-intelligence/src/: briefing.rs  co_change.rs  cochange.rs  context_file.rs  dead_code.rs  decay.rs  drift.rs  hotspots.rs  lib.rs  simulation.rs  traceability.rs
crates/ares-intelligence/tests/: benchmark_budget_tests.rs  cache_validation_tests.rs  chaos_tests.rs  collaboration_ensemble_tests.rs  concurrency_tests.rs  context_stress_tests.rs  coordinator_state_tests.rs  determinism_tests.rs  e2e_lifecycle_tests.rs  explainability_tests.rs  intelligence_certification_tests.rs  knowledge_sync_tests.rs  learning_tests.rs  prompt_analysis_tests.rs  property_tests.rs  provider_contract.rs  provider_failure_matrix.rs  readiness_gate_tests.rs  routing_engine_tests.rs  routing_overhead_baseline.json  selection_baseline.json  selection_edge_cases.rs  stability_tests.rs  telemetry_tests.rs
crates/ares-knowledge/: Cargo.toml
crates/ares-knowledge-graph/: Cargo.toml
crates/ares-knowledge-graph/src/: impact.rs  integrity.rs  lib.rs  models.rs  projection.rs  projector_registry.rs  queries.rs  statistics.rs  store.rs  traversal.rs  versioning.rs
crates/ares-knowledge-graph/tests/: canonical_query_validation.rs  domain_projection_validation.rs  lineage_expansion_validation.rs  projection_validation.rs
crates/ares-knowledge/src/: lib.rs  memory_graph.rs  tests.rs
crates/ares-mcp/: Cargo.toml
crates/ares-mcp/src/: handler.rs  lib.rs  main.rs  server.rs  tools.rs
crates/ares-memory-bootstrap/: Cargo.toml
crates/ares-memory-evolution/: Cargo.toml
evaluation/: Cargo.toml
evaluation/ci/: thresholds.toml
evaluation/reports/: trend.md
evaluation/src/: dataset.rs  main.rs  report.rs
(+1410 files in other folders)
