[package]
name = "ares-evaluation"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4" }
toml = { version = "0.8" }
sha2 = { version = "0.10" }

# Link directly to the main workspace crates via relative paths
ares-core = { path = "../crates/ares-core" }
ares-store = { path = "../crates/ares-store" }
ares-knowledge-graph = { path = "../crates/ares-knowledge-graph" }
ares-reasoning = { path = "../crates/ares-reasoning" }
ares-governance = { path = "../crates/ares-governance" }
ares-requirements = { path = "../crates/ares-requirements" }
ares-traceability = { path = "../crates/ares-traceability" }
