[package]
name = "ares-agent-arena"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
ares-core = { path = "../ares-core" }
ares-store = { path = "../ares-store" }
ares-context = { path = "../ares-context" }
ares-scanner = { path = "../ares-scanner" }
ares-benchmark = { path = "../ares-benchmark" }
