[package]
name = "ares-agent-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
ares-core = { path = "../ares-core" }
ares-store = { path = "../ares-store" }
ares-intelligence = { path = "../ares-intelligence" }
ares-memory-intelligence = { path = "../ares-memory-intelligence" }
ares-world-model = { path = "../ares-world-model" }
ares-governance = { path = "../ares-governance" }

# Async runtime
tokio.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging / tracing
tracing.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
