[package]
name        = "ares-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "ares_agent"
path = "src/lib.rs"

[[bin]]
name = "ares-agent"
path = "src/main.rs"

[[bin]]
name = "ares"
path = "src/cli.rs"

[dependencies]
utoipa = { workspace = true }
ares-core    = { path = "../ares-core" }
ares-store   = { path = "../ares-store" }
ares-scanner = { path = "../ares-scanner" }

tokio        = { workspace = true }
tokio-util   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
metrics      = { workspace = true }
uuid         = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }

tracing-subscriber = { workspace = true }
clap         = { workspace = true }
dialoguer    = { workspace = true }
toml         = { workspace = true }
once_cell    = { workspace = true }
regex        = { workspace = true }
chrono       = { workspace = true }
blake3       = { workspace = true }
async-trait  = { workspace = true }
reqwest      = { workspace = true, features = ["json"] }
arboard      = "3.4"
[dev-dependencies]
tempfile     = { workspace = true }
ares-embeddings = { path = "../ares-embeddings" }
