[package]
name = "ares-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ares-core  = { path = "../ares-core", features = ["utoipa"] }
ares-app   = { path = "../ares-app" }
ares-chat-import = { path = "../ares-chat-import" }
ares-store = { path = "../ares-store" }
ares-agent = { path = "../ares-agent" }
ares-orchestrator = { path = "../ares-orchestrator", features = [] }
ares-knowledge = { path = "../ares-knowledge" }
ares-project-memory = { path = "../ares-project-memory" }
ares-context-generator = { path = "../ares-context-generator" }
ares-context-injector = { path = "../ares-context-injector" }
ares-planner = { path = "../ares-planner" }
ares-extractor = { path = "../ares-extractor" }
ares-memory-intelligence = { path = "../ares-memory-intelligence" }
ares-validation = { path = "../ares-validation" }
ares-knowledge-graph = { path = "../ares-knowledge-graph" }
ares-memory-evolution = { path = "../ares-memory-evolution" }
tokio      = { workspace = true }
axum       = { workspace = true }
tower      = { workspace = true }
tower-http = { workspace = true }
utoipa     = { workspace = true }
utoipa-swagger-ui = { workspace = true }
rusqlite   = { workspace = true }
metrics    = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow     = { workspace = true }
once_cell  = { workspace = true }
chrono     = { workspace = true }
futures    = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
tempfile = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
