[package]
name = "ares-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ares-core    = { path = "../ares-core" }
ares-store   = { path = "../ares-store" }
ares-agent   = { path = "../ares-agent" }
ares-scanner = { path = "../ares-scanner" }
ares-embeddings = { path = "../ares-embeddings" }

tokio        = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
async-trait  = { workspace = true }
