[package]
name = "ares-candidates"
version = "0.1.0"
edition = "2021"

[dependencies]
ares-core = { path = "../ares-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"
