[package]
name = "ares-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "ares"

[dependencies]
ares-core = { path = "../ares-core" }
ares-store = { path = "../ares-store" }
ares-memory-intelligence = { path = "../ares-memory-intelligence" }
ares-validation = { path = "../ares-validation" }
ares-governance = { version = "0.1.0", path = "../ares-governance" }
ares-knowledge-graph = { path = "../ares-knowledge-graph" }
ares-pr-engine = { path = "../ares-pr-engine" }
ares-candidates = { path = "../ares-candidates" }

clap = { version = "4.4", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde_json.workspace = true
ares-requirements = { version = "0.1.0", path = "../ares-requirements" }
ares-traceability = { version = "0.1.0", path = "../ares-traceability" }
ares-ingestion = { version = "0.1.0", path = "../ares-ingestion" }
rusqlite.workspace = true
uuid.workspace = true
ares-scanner = { version = "0.1.0", path = "../ares-scanner" }
ares-git-memory = { version = "0.1.0", path = "../ares-git-memory" }

[[bin]]
name = "ares"
path = "src/main.rs"
