[package]
name = "ares-completeness"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"

ares-core = { path = "../ares-core" }
ares-store = { path = "../ares-store" }
ares-reasoning = { path = "../ares-reasoning" }
ares-evolution = { path = "../ares-evolution" }
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3.2"
