[package]
name = "ares-context-generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Context Generator — produces portable, AI-context-window-friendly output from project memory"

[dependencies]
utoipa = { workspace = true }
ares-core                  = { path = "../ares-core" }
ares-project-memory        = { path = "../ares-project-memory" }
ares-decision-intelligence = { path = "../ares-decision-intelligence" }

serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
tempfile     = { workspace = true }
