[package]
name = "ares-context-injector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Context Injector — selects, ranks, budgets, and injects context into AI prompts"

[dependencies]
utoipa = { workspace = true }
ares-core = { path = "../ares-core" }
ares-store = { path = "../ares-store" }
ares-context-generator = { path = "../ares-context-generator" }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
tokio.workspace = true
ares-git-memory = { version = "0.1.0", path = "../ares-git-memory" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }
