[package]
name = "ares-context"
version = "0.1.0"
edition = "2021"

[dependencies]
ares-core = { path = "../ares-core" }
ares-store = { path = "../ares-store" }
ares-project-memory = { path = "../ares-project-memory" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
chrono = { workspace = true }
