[package]
name = "ares-coordination"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
utoipa = { workspace = true }
# Workspace crates
ares-core = { path = "../ares-core" }
ares-agent-runtime = { path = "../ares-agent-runtime" }

# Async runtime
tokio.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging / tracing
tracing.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
