[package]
name = "ares-decision-dna"
version = "0.1.0"
edition = "2021"

[dependencies]
utoipa = { workspace = true }
ares-core = { path = "../ares-core" }
ares-store = { path = "../ares-store" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
anyhow = "1.0"
rusqlite = { workspace = true }
async-trait = "0.1"
