[package]
name = "ares-decision-intelligence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Decision Intelligence Engine for ARES MemoryOS"

[dependencies]
ares-core         = { path = "../ares-core" }
ares-store        = { path = "../ares-store" }
ares-traceability = { path = "../ares-traceability" }

serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
rusqlite   = { workspace = true }
uuid       = { workspace = true, features = ["v4"] }
