[package]
name = "ares-decision-intelligence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Decision Intelligence Engine for ARES MemoryOS"

[dependencies]
ares-core = { path = "../ares-core" }
ares-store = { path = "../ares-store" }
ares-retrieval = { path = "../ares-retrieval" }
ares-evolution = { path = "../ares-evolution" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
uuid = { workspace = true, features = ["v4"] }
tokio = { workspace = true }
