[package]
name = "ares-extractor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ares-core  = { path = "../ares-core" }
ares-store = { path = "../ares-store" }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
async-trait = { workspace = true }
rusqlite   = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
