[package]
name = "ares-git-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ares-core = { version = "0.1.0", path = "../ares-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
rayon = "1.10"
wait-timeout = "0.2.1"
