[package]
name = "ares-governance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ares-core = { path = "../ares-core" }
ares-store = { path = "../ares-store" }
ares-knowledge-graph = { path = "../ares-knowledge-graph" }
ares-memory-evolution = { path = "../ares-memory-evolution" }
ares-requirements = { path = "../ares-requirements" }
ares-traceability = { path = "../ares-traceability" }
ares-candidates = { path = "../ares-candidates" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v7", "serde"] }
tokio = { workspace = true, features = ["sync"] }
utoipa = { workspace = true }
rusqlite.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
