[package]
name = "ares-ingestion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ares-core = { version = "0.1.0", path = "../ares-core" }
ares-knowledge-graph = { version = "0.1.0", path = "../ares-knowledge-graph" }
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.8", features = ["v4"] }
