[package]
name = "ares-intelligence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
ares-core = { path = "../ares-core" }
ares-candidates = { path = "../ares-candidates" }
ares-git-memory = { path = "../ares-git-memory" }
[dev-dependencies]
tokio = { workspace = true }
proptest = "1.4"
