[package]
name = "ares-intelligence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
ares-core = { path = "../ares-core" }
ares-store = { path = "../ares-store" }
ares-candidates = { path = "../ares-candidates" }
ares-git-memory = { path = "../ares-git-memory" }
ares-knowledge-graph = { path = "../ares-knowledge-graph" }
rusqlite = "0.32.1"

[dev-dependencies]
tokio = { workspace = true }
proptest = "1.4"
tempfile = { workspace = true }
