[package]
name = "ares-knowledge-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ares-core = { path = "../ares-core" }
ares-store = { path = "../ares-store" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.8", features = ["v4"] }
rusqlite = "0.32"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.10"
