[package]
name = "ares-knowledge"
version = "0.1.0"
edition = "2021"

[dependencies]
ares-core = { path = "../ares-core" }
ares-store = { path = "../ares-store" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
metrics = { workspace = true }
axum = { workspace = true }
utoipa = { workspace = true }
rusqlite = { workspace = true }
