[package]
name = "ares-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ares-core  = { path = "../ares-core" }
ares-app   = { path = "../ares-app" }
ares-agent = { path = "../ares-agent" }
ares-store = { path = "../ares-store" }
ares-project-memory = { path = "../ares-project-memory" }
ares-context-generator = { path = "../ares-context-generator" }
ares-context-injector = { path = "../ares-context-injector" }
ares-planner = { path = "../ares-planner" }
ares-extractor = { path = "../ares-extractor" }

tokio      = { workspace = true, features = ["io-std", "io-util"] }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
jsonrpc-core = "18.0"
anyhow     = { workspace = true }
chrono     = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
