[package]
name = "ares-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ares-core  = { path = "../ares-core" }
ares-app   = { path = "../ares-app" }
ares-agent = { path = "../ares-agent" }
ares-store = { path = "../ares-store" }
ares-project-memory = { path = "../ares-project-memory" }
ares-context-generator = { path = "../ares-context-generator" }
ares-context-injector = { path = "../ares-context-injector" }
ares-planner = { path = "../ares-planner" }
ares-extractor = { path = "../ares-extractor" }

ares-knowledge-graph = { path = "../ares-knowledge-graph" }
ares-intelligence = { path = "../ares-intelligence" }
ares-memory-intelligence = { path = "../ares-memory-intelligence" }
ares-governance = { path = "../ares-governance" }
ares-validation = { path = "../ares-validation" }
tokio      = { workspace = true, features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
tower-mcp  = "0.12.0"
anyhow     = { workspace = true }
chrono     = { workspace = true }
schemars = "1.2.1"
ares-requirements = { version = "0.1.0", path = "../ares-requirements" }
ares-traceability = { version = "0.1.0", path = "../ares-traceability" }

[dev-dependencies]
tempfile   = { workspace = true }
ares-query = { path = "../ares-query" }
