[package]
name = "ares-memory-evolution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
utoipa = { workspace = true }
ares-core = { path = "../ares-core" }
ares-store = { path = "../ares-store" }
ares-knowledge-graph = { path = "../ares-knowledge-graph" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ['full', 'test-util'] }
